<?xml version="1.0"?>
<package format="2">
  <name>mbes_sim</name>
  <version>0.0.0</version>
  <description>The mbes_sim package</description>

  <maintainer email="roland@ccom.unh.edu">roland</maintainer>

  <license>BSD</license>


  <buildtool_depend>catkin</buildtool_depend>
  <depend>geographic_msgs</depend>
  <depend>sensor_msgs</depend>
  <depend>project11</depend>
  <depend>python3-gdal</depend>
  <depend>rospy</depend>

  <export>
  </export>
</package>
